--- a/pom.xml
+++ b/pom.xml
@@ -5,8 +5,26 @@
 	<artifactId>archetype-assembly-maven-plugin</artifactId>
 	<version>1.0-SNAPSHOT</version>
 	<packaging>maven-plugin</packaging>
-	<name>Archetype Assembler</name>
-	<description>Assembles super-archetype from archetypes listed as dependencies</description>
+	<name>Archetype Assembler Plugin</name>
+	<description>Plugin to assemble super-archetype from archetypes listed as dependencies</description>
+
+	<licenses>
+  		<license>
+    			<name>The Apache Software License, Version 2.0</name>
+    			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+  		</license>
+	</licenses>
+	<developers>
+		<developer>
+			<name>Dmitriy Volk</name>
+			<email>dmitriy@dmitriyvolk.net</email>
+		</developer>
+	</developers>
+	<scm>
+  		<connection>scm:git:git@github.com:dmitriyvolk/archetype-assembly-maven-plugin.git</connection>
+  		<developerConnection>scm:git:git@github.com:dmitriyvolk/archetype-assembly-maven-plugin.git</developerConnection>
+  		<url>git@github.com:dmitriyvolk/archetype-assembly-maven-plugin.git</url>
+	</scm>
 	<dependencies>
 		<dependency>
 			<groupId>org.apache.maven</groupId>
@@ -63,4 +81,27 @@
 			</plugin>
 		</plugins>
 	</build>
+        <profiles>
+		<profile>
+			<id>release</id>
+			<build>
+				<plugins>
+      					<plugin>
+        					<groupId>org.apache.maven.plugins</groupId>
+        					<artifactId>maven-gpg-plugin</artifactId>
+        					<executions>
+          						<execution>
+            						<id>sign-artifacts</id>
+            						<phase>verify</phase>
+            						<goals>
+              						<goal>sign</goal>
+            						</goals>
+          						</execution>
+        					</executions>
+      					</plugin>
+ 				</plugins>
+			</build>
+		</profile>
+	</profiles>
+
 </project>
