--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>net.dmitriyvolk.maven.plugins</groupId>
 	<artifactId>archetype-assembly-maven-plugin</artifactId>
-	<version>1.0</version>
+	<version>1.0-SNAPSHOT</version>
 	<packaging>maven-plugin</packaging>
 	<name>Archetype Assembler Plugin</name>
 	<description>Plugin to assemble super-archetype from archetypes listed as dependencies</description>
@@ -24,6 +24,16 @@
   		<developerConnection>scm:git:git@github.com:dmitriyvolk/archetype-assembly-maven-plugin.git</developerConnection>
   		<url>git@github.com:dmitriyvolk/archetype-assembly-maven-plugin.git</url>
 	</scm>
+	<distributionManagement>
+	  <snapshotRepository>
+	    <id>ossrh</id>
+	    <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+	  </snapshotRepository>
+	  <repository>
+	    <id>ossrh</id>
+	    <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+	  </repository>
+	</distributionManagement>
 	<dependencies>
 		<dependency>
 			<groupId>org.apache.maven</groupId>
@@ -101,6 +111,32 @@
           						</execution>
         					</executions>
       					</plugin>
+					<plugin>
+					  <groupId>org.apache.maven.plugins</groupId>
+					  <artifactId>maven-source-plugin</artifactId>
+					  <version>2.2.1</version>
+					  <executions>
+					    <execution>
+					      <id>attach-sources</id>
+					      <goals>
+						<goal>jar-no-fork</goal>
+					      </goals>
+					    </execution>
+					  </executions>
+					</plugin>
+					<plugin>
+					  <groupId>org.apache.maven.plugins</groupId>
+					  <artifactId>maven-javadoc-plugin</artifactId>
+					  <version>2.9.1</version>
+					  <executions>
+					    <execution>
+					      <id>attach-javadocs</id>
+					      <goals>
+						<goal>jar</goal>
+					      </goals>
+					    </execution>
+					  </executions>
+					</plugin>
  				</plugins>
 			</build>
 		</profile>
